# solana-payment-processor

./: .gitignore  Anchor.toml  LICENSE  Makefile  README.md  package-lock.json  package.json  tsconfig.json
programs/payment_processor/: Cargo.toml  build.rs
programs/payment_processor/src/: lib.rs
programs/solana-finance/: Cargo.toml
programs/solana-finance/src/: lib.rs
sdk/: package-lock.json  package.json  tsconfig.check.json  tsconfig.json
sdk/idl/: payment_processor.json  payment_processor.ts
sdk/src/: index.ts
sdk/src/idl/: payment_processor.d.ts  payment_processor.json  payment_processor.ts
tests/: payment-processor.ts  solana-finance.ts
